--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
+    "xml2js": "^0.4.23",
     "yargs": "^12.0.5"
   },
   "browserslist": [
