--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.1",
+  "version": "1.2.1",
   "manifest_version": 2,
   "name": "Posterizer",
   "description": "Apply posterDB sets to plex",
@@ -12,9 +12,12 @@
   "background": {
     "scripts": ["lib/js/browser-polyfill.js", "background.js"]
   },
-  "browser_action": {
+  "page_action": {
+    "browser_style": true,
+    "default_title": "Posterizer",
     "default_icon": "img/orange.png",
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "show_matches": ["*://*.theposterdb.com/*"]
   },
   "permissions": [
     "*://*.theposterdb.com/*",
